The unitTests were created for the controllers and an improvement was found in the validation of the notFound

--- a/mind.UnitTest/mind.UnitTest.csproj
+++ b/mind.UnitTest/mind.UnitTest.csproj
@@ -24,4 +24,10 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../mind.API/mind.API.csproj" />
+    <ProjectReference Include="../mind.Core/mind.Core.csproj" />
+    <ProjectReference Include="../mind.Infraestructure/mind.Infraestructure.csproj" />
+  </ItemGroup>
+
 </Project>
